[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-blog"
version = "0.1.0"
description = "A modern Flask blog backed by local Markdown files"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.0",
  "python-frontmatter>=1.0",
  "markdown-it-py>=3.0",
  "mdit-py-plugins>=0.4",
  "pygments>=2.17",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = [
  "gunicorn>=22; platform_system != 'Windows'",
  "waitress>=3.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["blog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
